--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="style.css">
         <title>Document</title>
     </head>
     <body>
         <div class="overflow-hidden">
-            <img class="-z-40 h-4/6 -left-5 top-10 absolute bg-[#fbe0c8] p-3 rounded-r-3xl opacity-25" src="./Images/bg-testimonial.png" alt="" />
+            <img class="-z-40 h-4/6 -left-5 top-10 absolute bg-[#fbe0c8] p-3 rounded-r-3xl" src="./Images/bg-testimonial.png" alt="" style="filter:opacity(45%);" />
             <div class="z-10 flex items-center justify-between my-32 ml-20 mr-2">
-                <div class="ml-12">
+                <div class="ml-5">
                     <h1 class="mb-3 text-3xl font-bold">What they say about us</h1>
                     <p class="text-gray-500">We always provide the best service <br>and always maintain the quality of<br>coffee</p>
                 </div>
@@ -34,7 +35,7 @@
                     <div class="relative">
                         <img class="w-56" src="./Images/testimonial-2.png" alt=""/>
                         <div class="absolute h-50 w-56 -right-10 bottom-5 bg-[#FFCB7C] p-1.5 rounded-xl bg-opacity-50">
-                            <div class="bg-[#FFCB7C] pr-14 pl-2 py-2 rounded-lg">
+                            <div class="bg-[#FFCB7C] p-2 rounded-lg">
                                 <h3 class="font-semibold">John</h3>
                                 <p class="text-sm">This coffee shop is very<br>convenient</p>
                             </div>
@@ -43,7 +44,7 @@
                     <div class="relative">
                         <img class="w-56" src="./Images/testimonial-3.png" alt=""/>
                         <div class="absolute h-50 w-56 -right-10 bottom-5 bg-[#FFCB7C] p-1.5 rounded-xl bg-opacity-50">
-                            <div class="bg-[#FFCB7C] pr-14 pl-2 py-2 rounded-lg">
+                            <div class="bg-[#FFCB7C] p-2 rounded-lg">
                                 <h3 class="font-semibold">Azura</h3>
                                 <p class="text-sm">The coffe menu here is<br>very much </p>
                             </div>
@@ -54,8 +55,8 @@
             <div class="items-center w-full mb-56 text-center h-96 py-16">
                 <img class="absolute w-10/12 -z-50 left-32" src="./Images/bg-newsletter.png" alt=""/>
                 <div class="text-center mx-72 mt-28 mb-4">
-                    <h1 class="text-white font-bold text-3xl mb-">Subcribe to get 50% discount price</h1>
-                    <div class="flex justify-between items-center py-2 pl-4 pr-2 mx-48 bg-slate-50 rounded-full mt-10">
+                    <h1 class="text-white font-bold text-3xl">Subcribe to get 50% discount price</h1>
+                    <div class="flex justify-between items-center py-2 pl-4 pr-2 mx-36 bg-slate-50 rounded-full mt-10">
                         <h3 class="semi-bold">Email Address</h3>
                         <div class="rounded-full bg-black py-2 px-5 text-white">
                             <h3>Order now</h3>
