--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="overflow-hidden">
-            <img class="-z-40 h-4/6 -left-5 top-10 absolute bg-[#fbe0c8] p-3 rounded-r-3xl" src="./Images/bg-testimonial.png" alt="" style="filter:opacity(45%);" />
+            <img class="-z-40 w-2/3 h-4/6 -left-5 top-10 absolute bg-[#fbe0c8] p-2 rounded-r-3xl" src="./Images/bg-testimonial.png" alt="" style="filter:opacity(45%);" />
             <div class="z-10 flex items-center justify-between my-32 ml-20 mr-2">
                 <div class="ml-5">
                     <h1 class="mb-3 text-3xl font-bold">What they say about us</h1>
