--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             </div>
             <div class="items-center w-full mb-56 text-center h-96 py-16">
                 <img class="absolute w-10/12 -z-50 left-32" src="./Images/bg-newsletter.png" alt=""/>
-                <div class="text-center mx-72 mt-28 mb-4">
-                    <h1 class="text-white font-bold text-3xl">Subcribe to get 50% discount price</h1>
-                    <div class="flex justify-between items-center py-2 pl-4 pr-2 mx-36 bg-slate-50 rounded-full mt-10">
-                        <h3 class="semi-bold">Email Address</h3>
-                        <div class="rounded-full bg-black py-2 px-5 text-white">
-                            <h3>Order now</h3>
+                <div class="text-center mx-72 mt-32 mb-4">
+                    <h1 class="text-white font-semibold text-3xl">Subcribe to get 50% discount price</h1>
+                    <div class="flex justify-between items-center py-2 pl-4 pr-2 mx-40 bg-slate-50 rounded-full mt-10">
+                        <h3 class="font-bold text-gray-500">Email Address</h3>
+                        <div class="rounded-full bg-black py-2 px-4 text-white">
+                            <p class=" font-semibold text-sm">Order now</p>
                         </div>
                     </div>
                 </div>
